# kinderpedia

./: .gitignore  README.md  const.py  dailytimeline  hacs.json  newsfeed  pyproject.toml  requirements_test.txt  strings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
custom_components/kinderpedia/: __init__.py  api.py  calendar.py  config_flow.py  const.py  coordinator.py  diagnostics.py  history.py  manifest.json  sensor.py  services.yaml  strings.json
media_backup/: config.json.template  downloader.py  requirements.txt
tests/: __init__.py  conftest.py  test_api.py  test_calendar.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_history.py  test_init.py  test_newsfeed.py
